packages/parser-4d/grammar.js
    source_file: ($) => repeat($._top_level_item),

    _top_level_item: ($) =>
      choice(
        $._declaration,
        $.directive_statement,
        $._statement,
        $._newline,
      ),

    // Directives stand on their own at top level: `#PROJECT METHOD`,
    // `#PROPERTIES`. Separate from `_statement` because tree-sitter's LR
    // analysis can't reach `directive` through `_primary_expression` at
    // start-of-line — the `#` token gets snapped up by `binary_expression`
    // before the parser can backtrack into the directive's longer match.
    _newline: ($) => /\n/,

    class_extends_header: ($) =>
      seq(
        $.keyword_class_extends,
        field("base", $._type_ref),
        $._newline,
      ),

    // Optional file-terminating `End class`. 4D treats class files as
    // implicitly ending at EOF; some legacy files write the explicit form.
    constructor_declaration: ($) =>
      seq(
        $.keyword_class_constructor,
        optional(field("parameters", $.parameter_list)),
        $._newline,
      ),

    // `Function name(...)` and variants:
    //   Function foo()
    //   Function foo($a : Text) : Number
    //   Function get foo() : cs.Bar
    //   Function set foo($value : Text)
    //   Function get($k : Text)        ← function literally named `get`
    //   Function set($k : Text; $v)     ← function literally named `set`
    //   local Function foo(...)
    //   shared Function foo(...)
    //
    // The `get`/`set` ambiguity: `Function get` followed by an identifier is
    // a property getter; `Function get` followed by `(` is a plain function
    // named `get`. Tree-sitter's LR machinery explores both interpretations
    // because the `name` field accepts aliased keyword tokens.
    function_declaration: ($) =>
      seq(
        field("scope", optional(choice($.keyword_local, $.keyword_shared))),
        $.keyword_function,
        field("accessor", optional(choice($.keyword_get, $.keyword_set))),
        field("name", $._function_name),
        field("parameters", optional($.parameter_list)),
        field("return_type", optional($.return_type_annotation)),
        $._newline,
      ),

    // A function's name is either a plain identifier or one of the
    // contextual keywords that 4D allows as function names (`get`, `set`).
    // Aliasing to `identifier` keeps the CST uniform for the visitor.
    _function_name: ($) =>
      choice(
        $.identifier,
        alias($.keyword_get, $.identifier),
        alias($.keyword_set, $.identifier),
      ),

    // Optional explicit `End function`.
    // (Not currently emitted as a declaration node since most files don't
    //  use it — caught by `_misc_statement` fallback.)

    // `(param; param; ...)`. Empty list `()` is allowed.
    parameter_list: ($) =>
      seq(
        "(",
        optional(seq($.parameter_decl, repeat(seq(";", $.parameter_decl)))),
        ")",
      ),

    // A single parameter declaration: `$name` or `$name : Type`.
    parameter_decl: ($) =>
      seq(
        field("name", choice($.parameter, $.local_var)),
        optional(seq(":", field("type", $._type_ref))),
      ),

    // ` : SomeType` — return type annotation on Function/#DECLARE arrow form.
    return_type_annotation: ($) =>
      seq(":", field("type", $._type_ref)),

    // Type reference. Dotted segments allow `cs.Foo`, `cs.NS.Bar`, plus the
    // simple builtin types (`Text`, `Object`, `Number`, ...). Anything that
    // parses as a dotted identifier chain is accepted; semantic validation is
    // visitor-level.
    _type_ref: ($) => $.type_reference,
    type_reference: ($) =>
      seq($.identifier, repeat(seq(".", $.identifier))),

    // `property name` or `property name : Type`. Class-body only — at the
    // grammar level we accept anywhere; the visitor enforces context.
    property_declaration: ($) =>
      seq(
        $.keyword_property,
        field("name", $.identifier),
        field("type", optional($.return_type_annotation)),
        $._newline,
      ),

    // Modern `var` declaration:
    //   var $name : Text
    //   var $a; $b : Number    ← multi-var shared type
    //   var <>shared : Boolean
    var_declaration: ($) =>
      seq(
        $.keyword_var,
        $._var_decl_names,
        optional(seq(":", field("type", $._type_ref))),
        $._newline,
      ),

    _var_decl_names: ($) =>
      seq(
        choice($.local_var, $.interprocess_var, $.parameter, $.identifier),
        repeat(
          seq(
            ";",
            choice($.local_var, $.interprocess_var, $.parameter, $.identifier),
          ),
        ),
      ),

    // Legacy single-type declarations: `C_LONGINT($a; $b)`, `C_TEXT(name)`, etc.
    // Multi-line continuation (paren-balanced across lines) is supported by
    // making the body span newlines via repeat — see `_legacy_body` below.
    legacy_var_declaration: ($) =>
      seq(
        $.c_type_keyword,
        "(",
        optional(seq($._legacy_decl_item, repeat(seq(";", $._legacy_decl_item)))),
        ")",
        $._newline,
      ),

    // Legacy array declarations: `ARRAY TEXT(arr; size)`, etc.
    legacy_array_declaration: ($) =>
      seq(
        $.array_type_keyword,
        "(",
        optional(
          seq($._legacy_decl_item, repeat(seq(";", $._legacy_decl_item))),
        ),
        ")",
        $._newline,
      ),

    // An item inside a legacy C_*/ARRAY * body. The first item is usually a
    // variable name; subsequent items may be sizes (numbers) or more vars.
    // Accepts any token shape so we don't choke on real-world variation.
    _legacy_decl_item: ($) =>
      choice(
        $.local_var,
        $.interprocess_var,
        $.parameter,
        $.identifier,
        $.number,
        $.string,
      ),

    // `C_<TYPE>` legacy type prefix as a single token. Case-insensitive.
    // `\b` boundary so `C_LONGINTx` doesn't match.
    c_type_keyword: ($) =>
      token(
        prec(
          1,
          new RegExp(
            "[cC]_(" +
              C_TYPE_KEYWORDS.map(kwordCaseInsensitive).join("|") +
              ")",
          ),
        ),
      ),

    // `ARRAY <TYPE>` legacy array type prefix as a single token. Whitespace
    // between ARRAY and the type is required.
    array_type_keyword: ($) =>
      token(
        prec(
          1,
          new RegExp(
            "[aA][rR][rR][aA][yY][ \\t]+(" +
              ARRAY_TYPE_KEYWORDS.map(kwordCaseInsensitive).join("|") +
              ")",
          ),
        ),
      ),

    // `#DECLARE($a : T; $b)` — optionally with `-> $result : Type` arrow form.
    declare_directive: ($) =>
      seq(
        $.declare_keyword,
        field("parameters", $.parameter_list),
        field("return", optional($.declare_return)),
        $._newline,
      ),

    // ` -> $result : Type` — the arrow return form unique to #DECLARE.
    declare_return: ($) =>
      seq(
        "->",
        field("name", $.local_var),
        optional(seq(":", field("type", $._type_ref))),
      ),

    // The `#DECLARE` directive keyword, distinct from the general `directive`
    // token so the parser can take the structured path.
    declare_keyword: ($) => token(prec(2, kw("#DECLARE"))),

    // ---- Statements ----

    _block_item: ($) => choice($._statement, $._newline),

    // ---- Control flow ----

    if_statement: ($) =>
      seq(
        $.keyword_if,
        "(",
        field("condition", $._expression),
        ")",
        $._newline,
        field("then", repeat($._block_item)),
        repeat(field("else_if", $.else_if_clause)),
        optional(field("else", $.else_clause)),
        $.keyword_end_if,
        $._newline,
      ),

    else_if_clause: ($) =>
      seq(
        $.keyword_else_if,
        "(",
        field("condition", $._expression),
        ")",
        $._newline,
        repeat($._block_item),
      ),

    else_clause: ($) =>
      seq($.keyword_else, $._newline, repeat($._block_item)),

    case_of_statement: ($) =>
      seq(
        $.keyword_case_of,
        $._newline,
        repeat($._block_item),
        repeat(field("arm", $.case_label_arm)),
        optional(field("else", $.case_else_clause)),
        $.keyword_end_case,
        $._newline,
      ),

    // A Case-of arm: the `:` label line plus the body up to the next arm or
    // Else / End case.
    case_label_arm: ($) =>
      seq(
        ":",
        "(",
        field("condition", $._expression),
        ")",
        $._newline,
        repeat($._block_item),
      ),

    case_else_clause: ($) =>
      seq($.keyword_else, $._newline, repeat($._block_item)),

    // Standalone case label outside a Case of (kept as a fallback so loose
    // `:` lines don't error). Not normally produced once `case_of_statement`
    // is active.
    for_statement: ($) =>
      seq(
        $.keyword_for,
        "(",
        field("counter", $._expression),
        ";",
        field("start", $._expression),
        ";",
        field("end", $._expression),
        optional(seq(";", field("step", $._expression))),
        ")",
        $._newline,
        repeat($._block_item),
        $.keyword_end_for,
        $._newline,
      ),

    for_each_statement: ($) =>
      seq(
        $.keyword_for_each,
        "(",
        field("element", $._expression),
        ";",
        field("collection", $._expression),
        repeat(seq(";", $._expression)),
        ")",
        $._newline,
        repeat($._block_item),
        $.keyword_end_for_each,
        $._newline,
      ),

    while_statement: ($) =>
      seq(
        $.keyword_while,
        "(",
        field("condition", $._expression),
        ")",
        $._newline,
        repeat($._block_item),
        $.keyword_end_while,
        $._newline,
      ),

    repeat_statement: ($) =>
      seq(
        $.keyword_repeat,
        $._newline,
        repeat($._block_item),
        $.keyword_until,
        "(",
        field("condition", $._expression),
        ")",
        $._newline,
      ),

    use_statement: ($) =>
      seq(
        $.keyword_use,
        "(",
        field("semaphore", $._expression),
        ")",
        $._newline,
        repeat($._block_item),
        $.keyword_end_use,
        $._newline,
      ),

    // `Begin SQL ... End SQL`. The body is opaque — for now we accept any
    // tokens between the keywords; a future external scanner could capture
    // it as a single raw string. The `End SQL Without` variant is also
    // recognized (4D's "no select" form).
    assignment_statement: ($) =>
      seq(
        field("target", $._expression),
        field(
          "operator",
          choice($.op_assign, $.compound_assign_op),
        ),
        field("value", $._expression),
        $._newline,
      ),

    // Any expression appearing alone on a line — covers bare-name calls
    // (`DispatchedMethod` with no parens), parenthesized calls, member
    // chains, and special-form invocations like `CALL WORKER(...)`.
    expression_statement: ($) =>
      seq(field("expression", $._expression), $._newline),


    // ---- Expressions ----

    _expression: ($) =>
      choice(
        $._primary_expression,
        $.member_expression,
        $.call_expression,
        $.subscript_expression,
        $.binary_expression,
        $.unary_expression,
        $.parenthesized_expression,
        $.object_literal,
        $.collection_literal,
      ),

    member_expression: ($) =>
      prec.left(
        PREC.MEMBER,
        seq(
          field("object", $._expression),
          ".",
          field("property", $._member_name),
        ),
      ),

    _member_name: ($) =>
      choice(
        $.identifier,
        alias($.keyword_get, $.identifier),
        alias($.keyword_set, $.identifier),
        alias($.keyword_new, $.identifier),
      ),

    // `expr[index]` — bracket subscript. Distinct from `[Table]` and
    // `[Table]Field` tokens because those are lexed atomically.
    subscript_expression: ($) =>
      prec.left(
        PREC.MEMBER,
        seq(
          field("object", $._expression),
          "[",
          field("index", $._expression),
          "]",
        ),
      ),

    // Function or method call: `expr(args)`. The callee can be any
    // expression (covers `Foo(...)`, `cs.X.method(...)`, `$x.method(...)`,
    // `This.method(...)`, and — via `multi_word_identifier` as a primary
    // expression — `CALL WORKER(...)`, `New process(...)`, etc.).
    call_expression: ($) =>
      prec.left(
        PREC.CALL,
        seq(
          field("function", $._expression),
          field("arguments", $.argument_list),
        ),
      ),

    // Multi-word command callee. Allows certain contextual keywords (`New`,
    // `Get`, `Set`) as either the head or trailing words — necessary for
    // `New object(...)`, `New collection(...)`, `OB Get(...)`, `OB Set(...)`,
    // etc. Pure identifiers still cover the bulk: `CALL WORKER`,
    // `EXECUTE METHOD`, `Open form window`.
    multi_word_identifier: ($) =>
      seq($._word_or_keyword, repeat1($._word_or_keyword)),

    _word_or_keyword: ($) =>
      choice(
        $.identifier,
        alias($.keyword_new, $.identifier),
        alias($.keyword_get, $.identifier),
        alias($.keyword_set, $.identifier),
      ),

    argument_list: ($) =>
      seq(
        "(",
        optional(seq($._expression, repeat(seq(";", $._expression)))),
        ")",
      ),

    parenthesized_expression: ($) => seq("(", $._expression, ")"),

    // `{key: value; key: value; ...}` — 4D object literal. Keys are bare
    // identifiers, separator is `;`.
    binary_expression: ($) =>
      choice(
        prec.left(PREC.OR, seq($._expression, "|", $._expression)),
        prec.left(PREC.AND, seq($._expression, "&", $._expression)),
        prec.left(
          PREC.COMPARE,
          seq(
            $._expression,
            choice("=", "#", "<", ">", token(">="), token("<=")),
            $._expression,
          ),
        ),
        prec.left(
          PREC.ADD,
          seq($._expression, choice("+", "-"), $._expression),
        ),
        prec.left(
          PREC.MUL,
          seq($._expression, choice("*", "/", "^"), $._expression),
        ),
      ),

    compound_assign_op: ($) => token(/[+\-*/]=/),

    // ---- Operators (named so the catch-all can reference them) ----

    op_assign: ($) => ":=",
    op_other: ($) => token(/[+\-*/=<>&|^]|>=|<=/),
    // `#` as a comparison operator ("not equal"). Pulled out so the longer
    // `directive` token at prec(3) wins when the lexer sees `#` at the
    // start of `#PROJECT METHOD` / `#PROPERTIES`.
    identifier: ($) => /[A-Za-z0-9_]*[A-Za-z_][A-Za-z0-9_]*/,
    local_var: ($) =>
      /\$[A-Za-z_][A-Za-z0-9_]*|\$\d+[A-Za-z_][A-Za-z0-9_]*/,
    parameter: ($) => /\$\d+/,
    interprocess_var: ($) => /<>[A-Za-z_][A-Za-z0-9_]*/,
    number: ($) =>
      choice(
        token(prec(2, /0[xX][0-9a-fA-F]+/)),
        token(/\d+\.\d+([eE][+-]?\d+)?/),
        token(prec(2, /\d+[eE][+-]?\d+/)),
        token(/\d+/),
        token(/![\d\-]{1,12}!/),
        token(/\?[\d:]{1,10}\?/),
      ),

    string: ($) =>
      token(
        seq(
          '"',
          repeat(choice(/[^"\\\n]/, /""/, /\\./)),
          '"',
        ),
      ),

    keyword_if: ($) => token(prec(1, kw("if"))),
    keyword_else: ($) => token(prec(1, kw("else"))),
    keyword_end_if: ($) => token(prec(1, kw("end if"))),
    keyword_else_if: ($) => token(prec(1, kw("else if"))),

    keyword_case_of: ($) => token(prec(1, kw("case of"))),
    keyword_end_case: ($) => token(prec(1, kw("end case"))),

    keyword_for: ($) => token(prec(1, kw("for"))),
    keyword_for_each: ($) => token(prec(1, kw("for each"))),
    keyword_end_for: ($) => token(prec(1, kw("end for"))),
    keyword_end_for_each: ($) => token(prec(1, kw("end for each"))),

    keyword_while: ($) => token(prec(1, kw("while"))),
